`Refactor qbo-auth-lib to support QBO OAuth integration with improved error handling and configuration`

--- a/qbo-workspace/projects/qbo-auth-lib/tsconfig.lib.json
+++ b/qbo-workspace/projects/qbo-auth-lib/tsconfig.lib.json
@@ -5,6 +5,8 @@
     "outDir": "../../out-tsc/lib",
     "declaration": true,
     "declarationMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "inlineSources": true,
     "types": []
   },
