--- a/qbo-workspace/projects/qbo-auth-lib/package.json
+++ b/qbo-workspace/projects/qbo-auth-lib/package.json
@@ -1,6 +1,17 @@
 {
   "name": "qbo-auth-lib",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Angular library for QuickBooks Online OAuth integration",
+  "author": "Dev Dasani",
+  "license": "MIT",
+  "keywords": [
+    "angular",
+    "quickbooks",
+    "oauth",
+    "qbo",
+    "intuit",
+    "auth"
+  ],
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
